--- a/setup.cfg
+++ b/setup.cfg
@@ -11,3 +11,5 @@ test=pytest
 
 [tool:pytest]
 addopts = --verbose --cov alpaca_backtrader_api --cov-report=term-missing
+filterwarnings =
+    ignore:invalid escape sequence.*:DeprecationWarning
