--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
       - run:
           name: run tests
           command: |
+            pip install pandas==1.1.5 numpy==1.19.4 scipy==1.5.4
             python setup.py install
             pip install flake8 && flake8 alpaca_backtrader_api
             python setup.py test
