--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,3 +1,7 @@
 backtrader==1.9.76.123
-alpaca-trade-api==1.2.3
-exchange_calendars==3.2
+alpaca-trade-api==1.4.3
+exchange-calendars==3.4
+matplotlib==2.2.5
+msgpack==1.0.2
+numpy==1.21.2
+pandas==1.3.2
